# SC3020-DB-Systems

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  answer.txt  games.txt  index_manager.txt  index_manager_build_b+tree.txt  index_tree_log.txt  log.txt  log2.txt  logFile.txt  range_vs_brute.txt  txt
include/: block.h  bplustree.h  diskmanager.h  errors.h  index.h  indexer.h  indexmanager.h  record.h  utility.h
src/: block.cc  bplustree.cc  diskmanager.cc  indexer.cc  indexmanager.cc  main.cc  record.cc  utility.cc
test/: CMakeLists.txt  test.cc  test.cpp
